--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,4 @@ canvas{
 
 h1 {color: #fff; font-size: 86px; z-index:5; position: absolute; text-align: center;}
 span { z-index:5; position: absolute;}
-.hameid-loader-overlay{width:100%;height:100%;background:url('css/335.gif') center no-repeat #000000;z-index:99999;position:fixed;}
+.hameid-loader-overlay{width:100%;height:100%;background:url('335.gif') center no-repeat #000000;z-index:99999;position:fixed;}
