--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,29 @@ canvas{
 	background-color: #000000;
   position: absolute;
   top: 0px;
-  left: 0px;
-.hameid-loader-overlay{width:100%;height:100%;background:url('335.gif') center no-repeat #000000;z-index:99999;position:fixed;}
-	
+  left: 0px;        
 }
 
 h1 {color: #fff; font-size: 86px; z-index:5; position: absolute; text-align: center;}
 span { z-index:5; position: absolute;}
+#preloader  {
+     position: fixed;
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     background-color: #000000;
+     z-index: 99;
+    height: 100%;
+ }
+#status  {
+     width: 200px;
+     height: 200px;
+     position: absolute;
+     left: 50%;
+     top: 50%;
+     background-image: url(https://gapdesign.co.za/hosting/_testing/_codepen/festival/loader.gif);
+     background-repeat: no-repeat;
+     background-position: center;
+     margin: -100px 0 0 -100px;
+ }
