--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ span { z-index:5; position: absolute;}
      position: absolute;
      left: 50%;
      top: 50%;
-     background-image: url(css/335.gif);
+     background-image: url(335.gif);
      background-repeat: no-repeat;
      background-position: center;
      margin: -100px 0 0 -100px;
