--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ span { z-index:5; position: absolute;}
      left: 0;
      right: 0;
      bottom: 0;
-     background-color: #000000;
+     background-color: #ffffff;
      z-index: 99;
     height: 100%;
  }
