--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ span { z-index:5; position: absolute;}
     height: 100%;
  }
 #status  {
-    /* width: 200px; */
-    /* height: 200px; */
+     width: 700px;
+     height: 700px;
      position: absolute;
      left: 50%;
      top: 50%;
