--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,8 @@ span { z-index:5; position: absolute;}
     height: 100%;
  }
 #status  {
-     width: 1020px;
-     height: 1020px;
+     width: 700px;
+     height: 700px;
      position: absolute;
      left: 50%;
      top: 50%;
@@ -27,5 +27,5 @@ span { z-index:5; position: absolute;}
 	background-size: 768px 768px;
      background-repeat: no-repeat;
      background-position: center;
-     margin: -100px 0 0 -100px;
+     margin: 50px 100px 50px 100px;
  }
