--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,5 @@ span { z-index:5; position: absolute;}
 	background-size: 768px 768px;
      background-repeat: no-repeat;
      background-position: center;
-     margin-left: auto;
-	margin-right: auto
+     margin: -100px 0 0 -100px;
  }
