--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ span { z-index:5; position: absolute;}
  }
 #status  {
      background-image: url(https://lh6.googleusercontent.com/proxy/4rCjrb_rPOBSgJBKVZcHX16YHH-8Ebr7Wa_QSQgivYlSsMsyg3KTKa8MHrEWc7AtQypyAuUg-eCoZLzHkh-UfgXZrH5t3rsB5IDXWbzR=w400-h291-nc);
-
+     background-size: 768px 768px;
      background-repeat: no-repeat;
      background-position: center center;
  }
