--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ span { z-index:5; position: absolute;}
 #preloader  {
      position: fixed;
      top: 0;
-     left: 0;
+     left: 0; 
      right: 0;
      bottom: 0;
      background-color: #ffffff;
@@ -18,14 +18,14 @@ span { z-index:5; position: absolute;}
     height: 100%;
  }
 #status  {
-     width: 200px;
-     height: 200px;
+     width: 768px;
+     height: 768px;
      position: absolute;
      left: 50%;
      top: 50%;	
      background-image: url(https://lh6.googleusercontent.com/proxy/4rCjrb_rPOBSgJBKVZcHX16YHH-8Ebr7Wa_QSQgivYlSsMsyg3KTKa8MHrEWc7AtQypyAuUg-eCoZLzHkh-UfgXZrH5t3rsB5IDXWbzR=w400-h291-nc);
-     /* background-size: 768px 768px; */
+     background-size: 768px 768px;
      background-repeat: no-repeat;
-     background-position: center;
-     margin: -100px 0 0 -100px;	
+     background-position: center center;
+     margin: -300px 0 0 -300px;	
  }
