--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ span { z-index:5; position: absolute;}
      left: 0; 
      right: 0;
      bottom: 0;
-     background-color: #ffffff;
+     background-image: url(../IMG-20170901-WA0000.jpg);
      z-index: 99;
     height: 100%;
  }
