--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@ span { z-index:5; position: absolute;}
      left: 0; 
      right: 0;
      bottom: 0;
-     background-image: url(../IMG-20170901-WA0000.jpg);
-	background-repeat: no-repeat;
-	background-size: 768px 768px;
+     background-color: #ffffff;
      z-index: 99;
     height: 100%;
  }
